--- a/views/partials/admin-header.ejs
+++ b/views/partials/admin-header.ejs
@@ -26,6 +26,7 @@
         <a href="/admin/product" class="nav-item nav-link">Product Management</a>
         <a href="/admin/banner" class="nav-item nav-link active">Banner Management</a>
         <a href="/admin/coupon" class="nav-item nav-link active">coupon Management</a>
+        <a href="/admin/order" class="nav-item nav-link active">Order Management</a>
         <div class="nav-item dropdown" >
         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"> Admin </a>
           <div class="dropdown-menu m-0">
