--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,13 @@ body {
     border-color: #BA68C8
 }
 
+
+.bton-group{
+	position: relative;
+display: inline-flex;
+vertical-align: middle;
+}
+
 .profile-button {
     background: rgb(99, 39, 120);
     box-shadow: none;
