--- a/views/partials/user-header.ejs
+++ b/views/partials/user-header.ejs
@@ -23,7 +23,7 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <div class="navbar-nav ms-auto p-4 p-lg-0">
         <a href="/" class="nav-item nav-link active">Home</a>
-        <a href="/otp" class="nav-item nav-link">About</a>
+        <a href="/getorder" class="nav-item nav-link">About</a>
         <a href="/productPage" class="nav-item nav-link">Products</a>
         <a href="contac" class="nav-item nav-link">Contact</a>
         <div class="nav-item dropdown">
