--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -1,124 +1,118 @@
 <!-- Hero Section Begin -->
-
-<!-- Hero Section End -->
-
-<!-- Breadcrumb Section Begin -->
-<section class="breadcrumb-section set-bg" data-setbg="/img/breadcrumb.jpg">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <div class="breadcrumb__text">
-          <h2>My Orders</h2>
-          <div class="breadcrumb__option">
-            <a href="/">Home</a>
-            <span>My orders</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Breadcrumb Section End -->
+<%- include('../partials/user-header') %> 
+<div class="px-lg-5 py-5 mt-5 p-md-5">
 
 
+
+  <% console.log(myOrders.length>0) %> 
+<% if(myOrders.length>0) { %>
+<br><br><br>
 <section class="">
   <div class=" container py-2">
   <div class="row d-flex justify-content-center align-items-center">
     <div class="col">
-  
+      <% myOrders.forEach(order=>{ %>
       <div class="card card-stepper mb-2" style="border-radius: 10px;" id="order">
         <div class="card-body p-4">
           <div class="d-flex justify-content-between align-items-center">
             <div class="d-flex flex-column">
               <!-- <span class="lead fw-normal">Your order has been delivered</span> -->
-              <span class="text-muted small bold mb-1">orderId: #</span>
+              <span class="text-muted small bold mb-1">orderId: #<%= order.id %></span>
 
-              <span class="text-muted mb-2"><img src="/files/" alt="" width="60" class="img-fluid rounded">
-                <a href="/product/" class="text-muted"></a> x </span>
-       
+              <% order.products.forEach(product=>{%>
+                <span class="text-muted mb-2"><img src="/files/<%= product.productId.images[0] %>" alt="" width="60" class="img-fluid rounded">
+                  <a href="/product/<%= product.productId.id %>" class="text-muted"><%= product.productId.name %></a> x <%= product.quantity %> </span>
+                <% }) %>
 
-              <span class="text-muted small">on </span>
+              <span class="text-muted small">on  <%= order.createdAt.toDateString() %></span>
             </div>
             <div>
-              <a class="btn btn-sm btn-outline-dark" href="/user/myOrders/">View order details</a>
-         
-              <button class="btn btn-sm btn-outline-danger" onclick="" type="button"><i class="fa-solid fa-ban"></i></button>
-            
+              <a class="btn btn-sm btn-outline-dark" href="/user/myOrders/<%= order.id %>">View order details</a>
+              <% if(order.status !== "Delivered" && order.status !== "Cancelled"){ %>
+              <button class="btn btn-sm btn-outline-danger" onclick="sweetConfirm('<%=order.id%>')" type="button"><i class="bi bi-trash"></i></button>
+              <%  } %>
             </div>
           </div>
           <hr class="my-4">
 
-          <div class="d-flex flex-row justify-content-between align-items-center align-content-center" id="orderStatusRoad">
-        
+          <div class="d-flex flex-row justify-content-between align-items-center align-content-center" id="orderStatusRoad-<%= order.id %>">
+            <% if(order.status==="pending"){%>
             <span class="d-flex justify-content-center align-items-center big-dot dot">
               <i class="fa fa-check text-white"></i></span>
+            <!-- <hr class="flex-fill"><span class="blank-dot"></span>
             <hr class="flex-fill"><span class="blank-dot"></span>
             <hr class="flex-fill"><span class="blank-dot"></span>
-            <hr class="flex-fill"><span class="blank-dot"></span>
-            <hr class="flex-fill"><span class="blank-dot"></span>
-      
+            <hr class="flex-fill"><span class="blank-dot"></span> -->
+            <h5><span class="badge" style="background-color:rgb(201, 14, 77) ;"><%= order.status %> </span></h5>
+            <%}else if(order.status==="Packed"){ %>
             <span class="dot"></span>
+            <!-- <hr class="flex-fill track-line"><span class="d-flex justify-content-center align-items-center big-dot dot">  -->
+              <!-- <i class="fa fa-check text-white"></i></span>
+            <hr class="flex-fill"><span class="blank-dot"></span>
+            <hr class="flex-fill"><span class="blank-dot"></span>
+            <hr class="flex-fill"><span class="blank-dot"></span>  -->
+           <h5> <span class="badge" style="background-color:rgb(91, 12, 38) ;"><%= order.status %> </span></h5>
+            <% }else if(order.status==="Shipped"){ %>
+            <span class="dot"></span>
+            <!-- <hr class="flex-fill track-line"><span class="dot"></span>
             <hr class="flex-fill track-line"><span class="d-flex justify-content-center align-items-center big-dot dot">
               <i class="fa fa-check text-white"></i></span>
             <hr class="flex-fill"><span class="blank-dot"></span>
-            <hr class="flex-fill"><span class="blank-dot"></span>
-            <hr class="flex-fill"><span class="blank-dot"></span>
-    
-            <span class="dot"></span>
+            <hr class="flex-fill"><span class="blank-dot"></span>  -->
+            <h5><span class="badge" style="background-color:rgb(244, 138, 0) ;"><%= order.status %> </span></h5>
+            <% }else if(order.status==="Out for delivery"){%>
+           <span class="dot"></span>
+            <!-- <hr class="flex-fill track-line"><span class="dot"></span>
             <hr class="flex-fill track-line"><span class="dot"></span>
             <hr class="flex-fill track-line"><span class="d-flex justify-content-center align-items-center big-dot dot">
               <i class="fa fa-check text-white"></i></span>
-            <hr class="flex-fill"><span class="blank-dot"></span>
-            <hr class="flex-fill"><span class="blank-dot"></span>
-            
+            <hr class="flex-fill"><span class="blank-dot"></span>  -->
+           <h5><span class="badge" style="background-color:rgb(77, 1, 255) ;"><%= order.status %> </span></h5>
+            <% }else if(order.status==="Delivered"){%>
             <span class="dot"></span>
+            <!-- <hr class="flex-fill track-line"><span class="dot"></span>
             <hr class="flex-fill track-line"><span class="dot"></span>
             <hr class="flex-fill track-line"><span class="dot"></span>
             <hr class="flex-fill track-line"><span class="d-flex justify-content-center align-items-center big-dot dot">
-              <i class="fa fa-check text-white"></i></span>
-            <hr class="flex-fill"><span class="blank-dot"></span>
-          
-            <span class="dot"></span>
-            <hr class="flex-fill track-line"><span class="dot"></span>
-            <hr class="flex-fill track-line"><span class="dot"></span>
-            <hr class="flex-fill track-line"><span class="dot"></span>
-            <hr class="flex-fill track-line"><span class="d-flex justify-content-center align-items-center big-dot dot">
-              <i class="fa fa-check text-white"></i></span>
-  
+              <i class="fa fa-check text-white"></i></span> -->
+              <h5><span class="badge" style="background-color:rgb(0, 255, 8) ;"><%= order.status %> </span></h5>
+              <%}else{ %>
             <span class="dot-danger"></span>
-            <hr class="flex-fill track-line-danger"><span class=""></span>
+            <!-- <hr class="flex-fill track-line-danger"><span class=""></span>
             <hr class="flex-fill track-line-danger"><span class=""></span>
             <hr class="flex-fill track-line-danger"><span class=""></span>
             <hr class="flex-fill track-line-danger"><span class="d-flex justify-content-center align-items-center big-dot-danger dot">
-              <i class="fa-sharp fa-solid fa-xmark"></i></span>
-            
+              <i class="fa-sharp fa-solid fa-xmark"></i></span> -->
+             <h5> <span class="badge" style="background-color:rgb(177, 39, 85) ;"><%= order.status %> </span></h5>
+              <% } %>
           </div>
 
-          <div class="d-flex flex-row justify-content-between align-items-center" id="orderStatusUpdate">
-     
-            <div class="d-flex flex-column justify-content-center"><span>Order
-                placed</span></div>
-            <div class="d-flex flex-column justify-content-center align-items-center"><span>Order Packed</span></div>
+          <div class="d-flex flex-row justify-content-between align-items-center" id="orderStatusUpdate-<%= order.id %>">
+            <% if(order.status != "Cancelled"){ %>
+            <div class="d-flex flex-column justify-content-center"><span>Order status</span></div>
+            <!-- <div class="d-flex flex-column justify-content-center align-items-center"><span>Order Packed</span></div>
             <div class="d-flex flex-column justify-content-center align-items-center"><span>Order Dispatched</span></div>
-            <div class="d-flex flex-column justify-content-center align-items-center"><span>Out for delivery</span></div>
-            <div class="d-flex flex-column align-items-end"><span>Delivered</span></div>
-        
+            <div class="d-flex flex-column justify-content-center align-items-center"><span>Out for delivery</span></div> -->
+            <!-- <div class="d-flex flex-column align-items-end"><span>Delivered</span></div> -->
+            
+            <% }else{ %>
             <div class="d-flex flex-column justify-content-center"></div>
             <div class="d-flex flex-column justify-content-center align-items-center"></div>
             <div class="d-flex flex-column justify-content-center align-items-center"></div>
             <div class="d-flex flex-column justify-content-center align-items-center"></div>
-            <div class="d-flex flex-column align-items-end"><span>Cancelled</span></div>
-          
+            <div class="d-flex flex-column align-items-end"><span></span></div>
+            <% } %>
+
           </div>
 
         </div>
       </div>
-
+      <% }) %>
     </div>
   </div>
   </div>
 </section>
-
+<%} else {%>
 <section class="container">
   <div class="text-center py-5">
     <img src="/img/emptycart.png" alt="">
@@ -128,5 +122,7 @@
     <a href="/" class="primary-btn">Shop</a>
   </div>
 </section>
+<%}%>
+</div>
 
-
+<script src="/js/sweet-alert.js"></script>
