--- a/views/home.ejs
+++ b/views/home.ejs
@@ -131,7 +131,7 @@
             </li>
             <% allCategory.forEach((category) => {  %>
             <li class="nav-item me-2">
-              <a class="btn btn-outline-primary border-2 active" data-bs-toggle="pill" href="#tab-1"><%= category.categoryName %> </a>
+              <a class="btn btn-outline-primary border-2 active" data-bs-toggle="pill" href="/showcategorywise<%= category.id %>"><%= category.categoryName %> </a>
             </li>
             <!-- <li class="nav-item me-2">
               <a class="btn btn-outline-primary border-2" data-bs-toggle="pill" href="#tab-2">Fruits </a>
