--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -19,10 +19,10 @@
                 <a href="/getorder" class="text-dark h6"><i class="fa-solid fa-clipboard-list"></i> My Orders</a>
               </li>
               <li class="list-group-item">
-                <a href="#" id="userPassword" class="text-dark h6"><i class="fa-solid fa-key"></i> Change Password</a>
+                <!-- <a href="#" id="userPassword" class="text-dark h6"><i class="fa-solid fa-key"></i> Change Password</a> -->
               </li>
               <li class="list-group-item">
-                <a href="#" class="text-dark h6" onclick="document.getElementById('logoutForm').submit();"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
+                <!-- <a href="/logout" class="text-dark h6" onclick="document.getElementById('logoutForm').submit();"><i class="fa-solid fa-right-from-bracket"></i> Logout</a> -->
               </li>
             </ul>
           </div>
