--- a/views/home.ejs
+++ b/views/home.ejs
@@ -52,7 +52,7 @@
   <!-- Carousel End -->
 
   <!-- About Start -->
-  <!-- <div class="container">
+  <div class="container">
     <div class="container-xxl py-5">
       <div class="container">
         <div class="row g-5 align-items-center">
@@ -62,17 +62,19 @@
             </div>
           </div>
           <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-            <h1 class="display-5 mb-4">Best Organic Fruits And Vegetables</h1>
-            <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-            <p><i class="fa fa-check text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
-            <p><i class="fa fa-check text-primary me-3"></i>Aliqu diam amet diam et eos</p>
-            <p><i class="fa fa-check text-primary me-3"></i>Clita duo justo magna dolore erat amet</p>
+            <h1 class="display-5 mb-4">Best Organic Fruits , Vegetables 
+              And Nuts
+            </h1>
+            <p class="mb-4">Organic farmers and food producers grow and produce food without using synthetic chemicals such as pesticides and artificial fertilisers. They do not use genetically modified (GM) components or expose food to irradiation.</p>
+            <p><i class="fa fa-check text-primary me-3"></i>lower nitrate levels</p>
+            <p><i class="fa fa-check text-primary me-3"></i>higher vitamin C levels</p>
+            <p><i class="fa fa-check text-primary me-3"></i>higher levels of some minerals.</p>
             <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Read More</a>
           </div>
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
   <!-- About End -->
 
 
@@ -187,7 +189,7 @@
           <p class="text-white mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos.</p>
         </div>
         <div class="col-md-5 text-md-end wow fadeIn" data-wow-delay="0.5s">
-          <a class="btn btn-lg btn-secondary rounded-pill py-3 px-5" href="">Visit Now</a>
+          <a class="btn btn-lg btn-secondary rounded-pill py-3 px-5" href="/home">Visit Now</a>
         </div>
       </div>
     </div>
