--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -106,10 +106,11 @@
               <div class="checkout__order__products">Products <span>Total</span></div>
               <div>
                 <ul>
-
-                  <% findCart.products.forEach(item=>{%>
+          
+                  <% findCart.products.forEach((item,index)=>{%>
+          
                   <li class="mb-2">
-                    <img type="button" src="/files/" alt="" width="50" height="60">
+                    <!-- <img type="button" src="/files/" alt="" width="50" height="60"> -->
                     <%= item.name %> x<%= item.quantity %>
                     <span>₹<%= item.offerPrice ? (item.offerPrice*item.quantity).toFixed(2) : (item.price*item.quantity).toFixed(2)  %> </span>
                   </li>
