--- a/views/admin/product.ejs
+++ b/views/admin/product.ejs
@@ -95,7 +95,7 @@
           <tr>
             <td><%= index+1 %>
             </td>
-            <td><img src="/files/<%=product.images[0]%>" alt="" height="100" width="110" class="center"> </td>
+            <td><img src="/files/<%=product.images[0]%>" alt=""  width="220px" height="100px" class="center"> </td>
             <td><%= product.productName %></td>
             <td><%= product.category.categoryName %></td>
             <td><%= product.quantity %> </td>
