--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,14 +39,14 @@
         </div>      
       </div>
       <% })%> 
-      <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
+      <!-- <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#header-carousel" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
-      </button>
+      </button> -->
     </div>
   </div>
   <!-- Carousel End -->
@@ -58,7 +58,7 @@
         <div class="row g-5 align-items-center">
           <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
             <div class="about-img position-relative overflow-hidden p-5 pe-0">
-              <img class="img-fluid w-100" src="img/about.jpg">
+              <img class="img-fluidtp w-100" src="img/about.jpg">
             </div>
           </div>
           <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
