--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -20,7 +20,7 @@
               <span class="text-muted small bold mb-1">orderId: #<%= order.id %></span>
 
               <% order.products.forEach(product=>{%>
-                <span class="text-muted mb-2"><img src="/files/<%= product.productId.images[0] %>" alt="" width="60" class="img-fluid rounded">
+                <span class="text-muted mb-2"><img src="/files/<%= product.productId.images[0] %>" alt=""  width="120px" height="100px">
                   <a href="/product/<%= product.productId.id %>" class="text-muted"><%= product.productId.name %></a> x <%= product.quantity %> </span>
                 <% }) %>
 
@@ -119,7 +119,7 @@
     <div>
       <p class="h4">There is nothing in your orders. Let's shop something.</p>
     </div>
-    <a href="/" class="primary-btn">Shop</a>
+    <a href="/" class="btn btn-primary rounded-pill py-sm-3 px-sm-5">Shop</a>
   </div>
 </section>
 <%}%>
