--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,7 @@
               <div class="row justify-content-start">
                 <div class="col-lg-7">
                   <h1 class="display-2 mb-5 animated slideInDown"><%= banner.title %> </h1>
-                  <a href="" class="btn btn-primary rounded-pill py-sm-3 px-sm-5">Products</a>
+                  <a href="/productPage" class="btn btn-primary rounded-pill py-sm-3 px-sm-5">Products</a>
                   <a href="" class="btn btn-secondary rounded-pill py-sm-3 px-sm-5 ms-3">Services</a>
                 </div>
               </div>
